# zephyr_modules

cmsis/include/: cmsis_core.h
cmsis/zephyr/: CMakeLists.txt  Kconfig  module.yml
hal/RN8xxx_v2/lib/: rn8xxx_ll_clktrim.h  rn8xxx_ll_devices.h  rn8xxx_ll_eeprom.h  rn8xxx_ll_emu_lib.h  rn8xxx_ll_flash.h  rn8xxx_ll_gpadc_lib.h  rn8xxx_ll_rtc_lib.h  rn8xxx_ll_sipeeprom.h  rn8xxx_ll_sysclk.h  rn8xxx_ll_sysoption.h  rn8xxx_v2_lib.lib
hal/RN8xxx_v2/src/: Dat_Types.h  UserB_AllInt.c  UserB_AllInt.h  UserB_Flash.h  UserB_LIB.h  UserB_SystemInit.c  UserB_SystemInit.h  UserB_flash.c  core_cm0.h  cpu_rn8318.c  eeprom.c  hal_board.c  hfp_cpu_def.h  hfp_def.h  hfp_system.h  iic_driver.c  main.c  nor_flash.c  nvm.c  nvm.h  rn831x_rn861x_mcu.h  rn8xxx_v2_lib.h  spi_driver.c  startup_rn831x_rn861x_mcu.s  sysctrl.h  system_rn831x_rn861x_mcu.c  system_rn831x_rn861x_mcu.h
hal/RN8xxx_v2/zephyr/: CMakeLists.txt  Kconfig  module.yml
hal/V32F20X_StdPeriph_Lib_V1.0.6/: V32F20x_CM0.svd  V32F20x_CM33.svd  V32F20x_V32H20x_Reference_Manual_V1.2.md
hal/V32F20X_StdPeriph_Lib_V1.0.6/BSP/: board.c  board.h
hal/V32F20X_StdPeriph_Lib_V1.0.6/zephyr/: CMakeLists.txt  Kconfig  module.yml
hal/V85XXP_Lib_V2.5/: V85XXP数据手册V2.4.md
hal/V85XXP_Lib_V2.5/zephyr/: CMakeLists.txt  Kconfig  module.yml
soc/rn8xxx/drivers/: CMakeLists.txt  Kconfig
soc/rn8xxx/dts/: rn8318.dtsi  rn8xxx.dtsi
soc/rn8xxx/zephyr/: CMakeLists.txt  Kconfig  module.yml
soc/v32f20x/: CMakeLists.txt  DRIVERS_STATUS.md  Kconfig  TODO.md
soc/v32f20x/zephyr/: CMakeLists.txt  Kconfig  module.yml
soc/v85xxp/: Kconfig
(+1447 files in other folders)
